--- a/configure.ac
+++ b/configure.ac
@@ -28,9 +28,9 @@ AM_SILENT_RULES([yes])
 # C/C++
 AC_PROG_CC_C99
 AC_PROG_CC_C_O
-AC_PROG_CXX
-AC_PROG_CXX_C_O
-AC_PROG_CXXCPP
+# AC_PROG_CXX
+# AC_PROG_CXX_C_O
+# AC_PROG_CXXCPP
 AC_PROG_INSTALL
 
 # Fortran-specific checks
