--- a/include/shmem/api.h.in
+++ b/include/shmem/api.h.in
@@ -3290,181 +3290,10 @@ extern "C"
 #endif   /* __STDC_VERSION__ >= 201112L test */
 #endif /* __STDC_VERSION__ defined test */
 
-    /**
-     * cache flushing(deprecated)
-     */
-
     /*
-     * @brief shmem_clear_cache_inv has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_clear_cache_inv(void);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_CLEAR_CACHE_INV()
-     @endcode
-     *
-     * @section Effect
-     *
-     * None.
-     *
-     * @deprecated Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @return None.
-     *
+     * deprecated cache routines
      */
-    void shmem_clear_cache_inv(void) _DEPRECATED;
-
-    /*
-     * @brief shmem_set_cache_inv has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_set_cache_inv(void);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_SET_CACHE_INV()
-     @endcode
-     *
-     * @section Effect
-     *
-     * None.  Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @deprecated Included for legacy use only.
-     *
-     * @return None.
-     *
-     */
-    void shmem_set_cache_inv(void) _DEPRECATED;
-
-    /*
-     * @brief shmem_clear_cache_line_inv has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_clear_cache_line_inv(void *target);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_CLEAR_CACHE_LINE_INV(target)
-     @endcode
-     *
-     * @param target is the address of the cache line.
-     *
-     * @section Effect
-     *
-     * None.
-     *
-     * @deprecated Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @return None.
-     *
-     */
-    void shmem_clear_cache_line_inv(void *target) _DEPRECATED;
-
-    /*
-     * @brief shmem_set_cache_line_inv has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_set_cache_line_inv(void *target);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_SET_CACHE_LINE_INV(target)
-     @endcode
-     *
-     * @param target is the address of the cache line.
-     *
-     * @section Effect
-     *
-     * None.
-     *
-     * @deprecated Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @return None.
-     *
-     */
-    void shmem_set_cache_line_inv(void *target) _DEPRECATED;
-
-    /*
-     * @brief shmem_udcflush has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_udcflush(void);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_UDCFLUSH()
-     @endcode
-     *
-     * @section Effect
-     *
-     * None.
-     *
-     * @deprecated Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @return None.
-     *
-     */
-    void shmem_udcflush(void) _DEPRECATED;
-
-    /*
-     * @brief shmem_udcflush_line has no effect.
-     *
-     * @section Synopsis
-     *
-     * @subsection c C/C++
-     @code
-     void shmem_udcflush_line(void *target);
-     @endcode
-     *
-     * @subsection f Fortran
-     @code
-     CALL SHMEM_UDCFLUSH_LINE(target)
-     @endcode
-     *
-     * @param target is the address of the cache line.
-     *
-     * @section Effect
-     *
-     * None.
-     *
-     * @deprecated Included for legacy use only, these calls have no
-     * effect in OpenSHMEM.
-     *
-     * @return None.
-     *
-     */
-    void shmem_udcflush_line(void *target) _DEPRECATED;
-
-    /*
-     * --end--
-     */
+#include "shmem/cache.h"
 
 #ifdef __cplusplus
 }
